
We reduced the scope for running spec directories, files, a single file or individual spec in TextMate to source.ruby.rspec. This allowed us to restore the standard Ruby shortcuts:

CMD-R runs all the specs in one file
CMD-SHIFT-R runs an individual spec
CMD-OPT-R runs any files or directories selected in the TextMate drawer

* test_ methods with an arity of 0 defined in a describe block or Example object will be run as an Example, providing a seamless transition from Test::Unit
* Removed BehaviourRunner
* Fixed [#13969] Spec Failures on Trunk w/ Autotest
* Applied [#14156] False positives with should_not (Patch from Antti Tarvainen)
* Applied [#14170] route_for and params_from internal specs fixed (Patch from Antti Tarvainen)
* Fixed [#14166] Cannot build trunk
* Applied [#14142] Fix for bug #11602: Nested #have_tag specifications fails on the wrong line number (Patch from Antti Tarvainen)
* Removed warn_if_no_files argument and feature
* Steps (Given/When/Then) with no blocks are treated as pending
* Applied [#13913] Scenario should treat no code block as pending (Patch from Evan Light)
* Fixed [#13370] Weird mock expectation error (Patch from Mike Mangino)
* Applied [#13952] Fix for performance regression introduced in r2096 (Patch from Ian Leitch)
* Applied [#13881] Dynamically include Helpers that are included on ActionView::Base (Patch from Brandon Keepers)
* Applied [#13833] ActionView::Helpers::JavaScriptMacrosHelper removed after 1.2.3 (Patch from Yurii Rashkovskii)
* Applied [#13814] RSpec on Rails w/ fixture-scenarios (Patch from Shintaro Kakutani)
* Add ability to define Example subclass instead of using describe
* Applied Patch from James Edward Gray II to improve syntax highlighting in TextMate
* Fixed [#13579] NoMethodError not raised for missing helper methods
* Fixed [#13713] form helper method 'select' can not be called when calling custom helper methods from specs
* Example subclasses Test::Unit::TestCase